# veil

./: .gitignore  AGENTS.md  CLAUDE.md  CLIENT_NATIVE_PLAN.md  Cargo.toml  FEATURE_CHANNEL_SCHEMA_PLAN.md  FEATURE_NODE_PERSISTENCE_PLAN.md  FEATURE_PROTOCOL_UPDATES_VPS_ANDROID_PLAN.md  FEATURE_RUNTIME_RUNNER_PLAN.md  FEATURE_TRANSPORT_HARDENING_PLAN.md  FEATURE_TRANSPORT_HEALTH_TRAIT_PLAN.md  FEATURE_TRANSPORT_INTEGRATION_PLAN.md  FEATURE_TRANSPORT_QUIC_PLAN.md  FEATURE_TRANSPORT_TOR_PLAN.md  FEATURE_TRANSPORT_WEBSOCKET_PLAN.md  FEATURE_WOT_COMPLETION_PLAN.md  GEMINI.md  MASTER_PLAN.md  README.md  ROADMAP.md  SPEC.md  package-lock.json  package.json  test_sqlite.rs
.github/workflows/: ci.yml  fdroid.yml  publish-sdk-js.yml
apps/android-node/: Cargo.toml  PLAN.md  README.md
apps/android-node/src/: adapters.rs  api.rs  discovery.rs  lib.rs  main.rs  protocol.rs  secure_message.rs  server.rs  state.rs  state_store.rs  worker.rs
apps/android-node/src/ui/: README.md  pubspec.yaml
apps/android-node/src/ui/android/app/: build.gradle.kts
apps/android-node/src/ui/android/app/src/main/: AndroidManifest.xml
apps/android-node/src/ui/android/app/src/main/assets/: veil_node
apps/android-node/src/ui/android/app/src/main/kotlin/com/veil/veil_android_node_ui/: MainActivity.kt  NodeForegroundService.kt
apps/android-node/src/ui/android/app/src/main/res/drawable/: launch_background.xml
apps/android-node/src/ui/android/app/src/main/res/values/: styles.xml
apps/android-node/src/ui/android/app/src/main/res/values-night/: styles.xml
apps/android-node/src/ui/ios/Runner/: Info.plist
apps/android-node/src/ui/ios/Runner.xcodeproj/: project.pbxproj
apps/android-node/src/ui/lib/: main.dart
apps/android-node/src/ui/lib/logic/: list_controller.dart  messaging_controller.dart  node_contact_config.dart  node_service.dart  preferences_controller.dart  social_controller.dart  zap_controller.dart
apps/android-node/src/ui/lib/logic/models/: node_event.dart  node_state.dart  profile_data.dart
apps/android-node/src/ui/lib/models/: node_event.dart  node_state.dart
apps/android-node/src/ui/lib/services/: node_service.dart
apps/android-node/src/ui/lib/ui/components/: empty_state.dart  entrance_fader.dart  feed_shimmer.dart  link_preview_card.dart  live_status_banner.dart  nested_post_card.dart  network_pulse.dart  network_status_drawer.dart  new_message_dialog.dart  poll_widget.dart  reaction_tray.dart  rich_text_view.dart  veil_post_card.dart  zap_dialog.dart
apps/android-node/src/ui/lib/ui/screens/: bookmarks_view.dart  chat_detail_view.dart  composer_view.dart  explore_view.dart  inbox_view.dart  node_home.dart  post_detail_view.dart  profile_edit_view.dart  profile_view.dart  settings_view.dart  social_home.dart
apps/android-node/src/ui/lib/ui/theme/: veil_theme.dart
apps/android-node/src/ui/lib/ui/widgets/: event_log_card.dart  identity_card.dart  lane_status_card.dart  node_status_card.dart  policy_card.dart  publish_card.dart  queue_card.dart  semantic_feed_card.dart  service_controls.dart
apps/android-node/src/ui/linux/: CMakeLists.txt
apps/android-node/src/ui/linux/runner/: my_application.cc
apps/android-node/src/ui/macos/Runner.xcodeproj/: project.pbxproj
apps/android-node/src/ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/android-node/src/ui/macos/Runner/Configs/: AppInfo.xcconfig
apps/android-node/src/ui/test/: composer_and_feed_media_test.dart  composer_test.dart  inbox_test.dart  logic_test.dart  messaging_test.dart  profile_test.dart  rich_content_test.dart  social_home_drawer_test.dart  social_widgets_test.dart  widget_test.dart  zap_test.dart
apps/android-node/src/ui/web/: index.html  manifest.json
apps/android-node/src/ui/windows/: CMakeLists.txt
apps/android-node/src/ui/windows/runner/: Runner.rc  main.cpp
apps/android-node/tests/: discovery_transport.rs  quic_swarm.rs  real_node.rs  swarm_sim.rs
apps/react-demo/: eslint.config.js  index.html  package.json
apps/react-native-demo/: README.md
apps/veil-desktop/: README.md  (+3 more)
apps/veil-desktop-relay/: Cargo.toml  README.md
apps/veil-desktop-relay/src/: main.rs
apps/veil-vps-node/: .env  .env.example  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entrypoint.sh
apps/veil-vps-node/src/: config.rs  http_server.rs  logger.rs  main.rs  nostr_bridge.rs  settings_db.rs
apps/veil-vps-node/web/: config.js  index.html  style.css
apps/veil-vps-node/web/admin/: index.html
crates/veil-crypto/: Cargo.toml
crates/veil-crypto/src/: aead.rs  keys.rs  lib.rs  signing.rs
crates/veil-node/: Cargo.toml
crates/veil-node/src/: ack.rs  batch.rs  bloom.rs  cache.rs  config.rs  forwarding.rs  lib.rs  persistence.rs  policy.rs  publish.rs  receive.rs  runtime.rs  service.rs  state.rs  subscriptions.rs
crates/veil-node/tests/: fuzz_runtime_ingest.rs
crates/veil-sim/: Cargo.toml
crates/veil-sim/src/: scenarios.rs
crates/veil-sim/tests/: e2e_ack_auto_emit.rs  e2e_alt_adapter.rs  e2e_memory_leak.rs  e2e_perf_load.rs  e2e_stress.rs  e2e_transport_runtime_smoke.rs
crates/veil-transport-ble/: Cargo.toml
crates/veil-transport-ble/src/: btleplug_backend.rs  chunking.rs  lib.rs  protocol.rs
crates/veil-transport-ble/tests/: btleplug_smoke.rs  e2e_swarm.rs
crates/veil-transport-quic/: Cargo.toml
crates/veil-transport-quic/src/: lib.rs
crates/veil-transport-tor/: Cargo.toml
crates/veil-transport-tor/src/: lib.rs
crates/veil-transport-websocket/: Cargo.toml
crates/veil-transport-websocket/src/: lib.rs
crates/veil-wasm/: Cargo.toml
crates/veil-wasm/src/: lib.rs
docs/: FDROID.md  SDK_NODE_DECISION_GATE.md  feed_bundle_schema.md  node_rpc.md  ui_requirements.md
examples/: bootstrap_peer.rs  edge_forwarder_hot_cache.rs  end_to_end.rs  runtime_facade.rs  transport_ble_btleplug.rs  transport_ble_mock.rs  transport_ble_runtime.rs  transport_multi_lane_runtime.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: codec_decode.rs  node_runtime_ingest.rs
scripts/: build_android_node.sh  build_android_quic.sh  install_veil_vps_node.sh  veil_vps_smoke.sh
(+100 files in other folders)
