[workspace]
members = [
  "apps/android-node",
  "apps/veil-vps-node",
  "apps/veil-desktop-relay",
  "crates/veil-core",
  "crates/veil-codec",
  "crates/veil-crypto",
  "crates/veil-fec",
  "crates/veil-node",
  "crates/veil-transport",
  "crates/veil-transport-ble",
  "crates/veil-transport-websocket",
  "crates/veil-transport-tor",
  "crates/veil-transport-quic",
  "crates/veil-sim",
  "crates/veil-wasm",
  "crates/veil-schema-feed",
  "packages/veil-sdk-dart/rust",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-2.0-or-later"
repository = "https://example.com/veil"
version = "0.1.0"

[workspace.dependencies]
blake3 = "1"
bytes = "1"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
thiserror = "1"
tracing = "0.1"
