[package]
name = "veil-android-node"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = { version = "0.7", features = ["ws", "json", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { workspace = true }
serde_json = "1"
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http = "1"
tower = "0.5"
