[package]
name = "veil-vps-node"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[dependencies]
axum = { version = "0.7", features = ["json"] }
bech32 = "0.11"
dotenvy = "0.15"
clap.workspace = true
config = "0.14"
futures-util = "0.3"
hex = "0.4"
humantime-serde = "1.1"
rand = { workspace = true }
rustls = "0.23"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { workspace = true }
serde_json = "1"
toml.workspace = true
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = "0.24"
tower-http = { version = "0.6", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
veil-core = { path = "../../crates/veil-core" }
veil-codec = { path = "../../crates/veil-codec" }
veil-crypto = { path = "../../crates/veil-crypto" }
veil-node = { path = "../../crates/veil-node" }
veil-schema-feed = { path = "../../crates/veil-schema-feed" }
veil-transport = { path = "../../crates/veil-transport" }
veil-transport-quic = { path = "../../crates/veil-transport-quic" }
veil-transport-websocket = { path = "../../crates/veil-transport-websocket" }
veil-transport-tor = { path = "../../crates/veil-transport-tor" }
veil-transport-ble = { path = "../../crates/veil-transport-ble", optional = true }
signal-hook = "0.3"

[features]
default = []
ble = ["veil-transport-ble"]
ble-btleplug = ["ble", "veil-transport-ble/btleplug"]

[dev-dependencies]
tempfile = "3"
