[package]
name = "veil-crypto"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chacha20poly1305 = { version = "0.10", features = ["std"] }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
veil-core = { path = "../veil-core" }
thiserror.workspace = true
