[package]
name = "veil-sim"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veil-node = { path = "../veil-node" }
veil-fec = { path = "../veil-fec" }
veil-core = { path = "../veil-core" }
veil-codec = { path = "../veil-codec" }
veil-crypto = { path = "../veil-crypto" }
veil-transport = { path = "../veil-transport" }
veil-transport-websocket = { path = "../veil-transport-websocket" }
veil-transport-tor = { path = "../veil-transport-tor" }
veil-transport-quic = { path = "../veil-transport-quic" }
rand.workspace = true
serde.workspace = true
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
base64 = "0.22"

[dev-dependencies]
tokio-tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
futures-util = "0.3"

[[example]]
name = "end_to_end"
path = "../../examples/end_to_end.rs"

[[example]]
name = "runtime_facade"
path = "../../examples/runtime_facade.rs"

[[example]]
name = "edge_forwarder_hot_cache"
path = "../../examples/edge_forwarder_hot_cache.rs"

[[example]]
name = "bootstrap_peer"
path = "../../examples/bootstrap_peer.rs"

[[example]]
name = "transport_multi_lane_runtime"
path = "../../examples/transport_multi_lane_runtime.rs"

[[bin]]
name = "vps_multilane_probe"
path = "src/bin/vps_multilane_probe.rs"
