[package]
name = "veil-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
veil-transport = { path = "../veil-transport" }
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "net", "io-util"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pki-types = "1"
rustls-pemfile = "2"
rcgen = "0.13"
thiserror.workspace = true
webpki-roots = "0.26"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
